# SandboxEnvironment

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  MAI-DS-R1.prompt.yml  Phi-4.prompt.yml  README.md  SECURITY.md  Traditional_Knowledge_Notice.txt  calculator.py  codecov.yml  docker-compose.yml  hello.py  pyproject.toml  requirements.txt  setup.py  test_calculator.py  test_hello.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: blank.yml  codecov.yml  codeql.yml  publish-package.yml  scorecards.yml
my_package/: README.md  __init__.py  calculator.py  hello.py
tests/: __init__.py  test_calculator.py  test_hello.py  test_init.py  test_my_package.py
