[project]
name = "sandboxenvironment"
version = "0.1.0"
authors = [
    { name = "Git-Hub-Chris", email = "153604499+Git-Hub-Chris@users.noreply.github.com" }
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "mypy",
  "pytest",
  "pytest-cov",
]

# Other configurations remain unchanged...